<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/global_margin">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/avatar_margin"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/summary_for_response"
        style="@style/summary_for_response_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_margin"
        android:text="@string/summary_for_response"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <TextView
        android:id="@+id/title_vacancy"
        style="@style/title_company_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_vacancy_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary_for_response"
        app:layout_constraintStart_toStartOf="@id/summary_for_response" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divider_margin"
        app:dividerColor="@color/average_grey"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_cover_letter"
        style="@style/add_cover_letter_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_cover_letter_margin"
        android:gravity="center"
        android:text="@string/add_cover_letter"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/your_cover_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/your_cover_letter"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:layout_marginVertical="@dimen/global_margin"
        style="@style/description_style"
        app:hintTextAppearance="@style/description_style"
        android:textColorHint="@color/basic_grey"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/add_cover_letter" />

    <Button
        android:id="@+id/button_respond"
        style="@style/button_respond_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_respond_height"
        android:background="@drawable/button"
        android:shadowRadius="8"
        android:layout_marginTop="@dimen/button_respond_margin"
        android:text="@string/respond"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/your_cover_letter"/>

</androidx.constraintlayout.widget.ConstraintLayout>