<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.fragment.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/global_margin"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_back_margin"
                android:src="@drawable/icon_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_is_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorite_heart"
                app:layout_constraintBottom_toBottomOf="@id/button_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/button_back" />

            <ImageView
                android:id="@+id/icon_sharing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/icon_sharing_margin"
                android:src="@drawable/sharing"
                app:layout_constraintBottom_toBottomOf="@id/icon_is_favourite"
                app:layout_constraintEnd_toStartOf="@id/icon_is_favourite"
                app:layout_constraintTop_toTopOf="@id/icon_is_favourite" />

            <ImageView
                android:id="@+id/icon_eyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/icon_eyes_margin"
                android:src="@drawable/eyes"
                app:layout_constraintBottom_toBottomOf="@id/icon_sharing"
                app:layout_constraintEnd_toStartOf="@id/icon_sharing"
                app:layout_constraintTop_toTopOf="@id/icon_sharing" />

            <TextView
                android:id="@+id/title_vacancy"
                style="@style/title_vacancy_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_vacancy_margin"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/salary_full"
                style="@style/salary_full_experience_schedules_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin"
                app:layout_constraintTop_toBottomOf="@id/title_vacancy" />

            <TextView
                android:id="@+id/experience_text"
                style="@style/salary_full_experience_schedules_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin"
                app:layout_constraintTop_toBottomOf="@id/salary_full" />

            <TextView
                android:id="@+id/schedules"
                style="@style/salary_full_experience_schedules_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/experience_text" />

            <androidx.cardview.widget.CardView
                android:id="@+id/container_applied_number"
                android:layout_width="0dp"
                android:layout_height="@dimen/container_applied_number_height"
                android:layout_marginTop="@dimen/container_applied_number_margin"
                android:layout_marginEnd="@dimen/container_applied_number_margin_end"
                android:backgroundTint="@color/dark_green"
                app:cardCornerRadius="@dimen/container_applied_number_radius"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/container_lookingNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schedules">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/applied_number"
                        style="@style/applied_number_style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/applied_number_margin_start" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/applied_number_margin_start"
                        android:src="@drawable/man" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/container_lookingNumber"
                android:layout_width="0dp"
                android:layout_height="@dimen/container_applied_number_height"
                android:layout_marginTop="@dimen/container_applied_number_margin"
                android:layout_marginEnd="@dimen/container_applied_number_margin_end"
                android:backgroundTint="@color/dark_green"
                app:cardCornerRadius="@dimen/container_applied_number_radius"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/container_applied_number"
                app:layout_constraintTop_toBottomOf="@id/schedules">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/looking_number"
                        style="@style/applied_number_style"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/looking_number_padding"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/looking_number_padding"
                        android:src="@drawable/man" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/container_map_margin"
                android:backgroundTint="@color/dark_average_grey"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintTop_toBottomOf="@id/container_applied_number">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/global_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_company"
                            style="@style/title_company_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/verification_icon_margin"
                            android:src="@drawable/verification_icon" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/map_margin"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/map" />

                    <TextView
                        android:id="@+id/address"
                        style="@style/address_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/description"
                style="@style/description_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/container_map" />

            <TextView
                android:id="@+id/your_tasks"
                style="@style/you_tasks_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/your_tasks_padding"
                android:text="@string/your_tasks"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/responsibilities"
                style="@style/description_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/your_tasks" />

            <TextView
                android:id="@+id/ask_employer_question"
                style="@style/description_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ask_employer_question_margin"
                android:text="@string/ask_employer_question"
                app:layout_constraintTop_toBottomOf="@id/responsibilities" />

            <TextView
                android:id="@+id/he_will_receive_with_response_vacancy"
                style="@style/he_will_receive_with_response_vacancy_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/he_will_receive_with_response_vacancy_margin"
                android:text="@string/he_will_receive_with_response_vacancy"
                app:layout_constraintTop_toBottomOf="@id/ask_employer_question" />

            <LinearLayout
                android:id="@+id/linear_layout_for_item_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/he_will_receive_with_response_vacancy" />

            <Button
                android:id="@+id/button_respond"
                style="@style/button_respond_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_respond_height"
                android:background="@drawable/button"
                android:shadowRadius="8"
                android:layout_marginTop="@dimen/global_margin"
                android:text="@string/respond"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_for_item_question" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>